--- a/Prediction of SV Congenital Heart Disease.ipynb
+++ b/Prediction of SV Congenital Heart Disease.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "(6871, 197)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,12 +37,8 @@
     "\n",
     "#NLTK\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from nltk import pos_tag\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
     "stop = stopwords.words('english')\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from collections import defaultdict\n",
     "\n",
     "#SkLearn\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,7 +48,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import model_selection, naive_bayes, svm\n",
+    "from sklearn import model_selection, svm\n",
     "from sklearn.metrics import f1_score, confusion_matrix, precision_score, recall_score, accuracy_score, classification_report, roc_auc_score\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.feature_selection import SelectKBest\n",
