Update Prediction of SV Congenital Heart Disease.ipynb

--- a/Prediction of SV Congenital Heart Disease.ipynb
+++ b/Prediction of SV Congenital Heart Disease.ipynb
@@ -286,7 +286,7 @@
     "#These are the text variables now because we transformed the others\n",
     "print(text)\n",
     "\n",
-    "#Look at how many people are flagged as Heterotaxy to ensure it was the amount Tobias thought\n",
+    "#Look at how many people are flagged as Single Ventricle to ensure it was the amount Tobias thought\n",
     "print(df_processed['SV_GROUP'].value_counts())\n",
     "\n",
     "#Set to only SV just to ensure I am getting 1803\n",
